--- a/src/assets/scss/global/_reset.scss
+++ b/src/assets/scss/global/_reset.scss
@@ -4,6 +4,8 @@ html {
     padding: 0;
     line-height: 1.1;
     font-size: 100%;
+    -ms-text-size-adjust:100%;
+    -webkit-text-size-adjust:100%;
     font-size: 15px;
     color: #4a4a4a;
     background: #fafafa;
@@ -18,4 +20,88 @@ body {
     font-family: $font-sans-serif;
 }
 
-
+article,aside,details,figcaption,figure,footer,header,main,menu,nav,section {
+display:block
+}
+summary {
+display:list-item
+}
+audio,canvas,progress,video {
+display:inline-block
+}
+audio:not([controls]) {
+display:none;
+height:0
+}
+progress {
+vertical-align:baseline
+}
+template,[hidden] {
+display:none
+}
+a {
+background-color:transparent;
+-webkit-text-decoration-skip:objects
+}
+a:active,a:hover {
+outline-width:0
+}
+abbr[title] {
+border-bottom:none;
+text-decoration:underline;
+text-decoration:underline dotted
+}
+b,strong {
+font-weight:inherit
+}
+b,strong {
+font-weight:bolder
+}
+dfn {
+font-style:italic
+}
+h1 {
+font-size:2em;
+margin:0.67em 0
+}
+mark {
+background-color:#ff0;
+color:#000
+}
+small {
+font-size:80%
+}
+sub,sup {
+font-size:75%;
+line-height:0;
+position:relative;
+vertical-align:baseline
+}
+sub {
+bottom:-0.25em
+}
+sup {
+top:-0.5em
+}
+img {
+border-style:none
+}
+svg:not(:root) {
+overflow:hidden
+}
+code,kbd,pre,samp {
+font-family:monospace, monospace;
+font-size:1em
+}
+figure {
+margin:1em 40px
+}
+hr {
+box-sizing:content-box;
+height:0;
+overflow:visible
+}
+button,input,select,textarea {
+font:inherit;
+margin:0
+}
