--- a/src/assets/scss/global/_reset.scss
+++ b/src/assets/scss/global/_reset.scss
@@ -52,9 +52,7 @@ text-decoration:underline;
 text-decoration:underline dotted
 }
 b,strong {
-font-weight:inherit
-}
-b,strong {
+font-weight:inherit;
 font-weight:bolder
 }
 dfn {
