--- a/src/partials/global/header.html
+++ b/src/partials/global/header.html
@@ -1,1 +1,17 @@
-header
+<header>
+  
+  <nav>
+    
+    <h1 class="logo">
+      <a href="#" title="{{ data.sitename }}">
+        <img src="{{ root }}assets/img/logo.svg" alt="{{ data.sitename }} | {{ data.sitedesc }}">
+      </a>
+    </h1>
+    
+    <ul class="topnav">
+      <li><a href="{{ root }}">Home</a></li>
+    </ul>
+    
+  </nav>
+  
+</header>
