--- a/src/partials/global/footer.html
+++ b/src/partials/global/footer.html
@@ -1,1 +1,9 @@
-footer
+<footer>
+  
+  <div class="ft-copy text-center">
+    
+    <p>&copy; 2018 <a href="{{ root }}">{{ data.sitename }}</a>. All rights reserved.
+    
+  </div>
+  
+</footer>
